# betty

./: .dockerignore  .env.docker.example  .gitignore  ALTENAR_IMPLEMENTATION.md  BETINIA_FULL_VALIDATION_SUMMARY.md  BETINIA_MULTISPORT_RESULTS.md  BETINIA_VALIDATION_OFFICIAL.md  CLAUDE.md  COMEON_FINAL_RESULTS.md  COMEON_OPTIMIZATION_RESULTS.md  Dockerfile  HAJPER_FULL_EXTRACTION_RESULTS.md  HAJPER_IMPLEMENTATION.md  HAJPER_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATIONS_IMPLEMENTED.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_PLAN.md  PROVIDER_RESEARCH.md  README.md  REFACTORING_SUMMARY.md  arnold.bat  arnold.ps1  arnoldsports.bat  arnoldstocks.bat  bankrollbbq.spec  build.ps1  buttons_dump.txt  check_db.py  degentraderxd.spec  docker-compose.dev.yml  docker-compose.yml  firev.spec  firevsports.bat  firevstocks.bat  kill.bat  main.py  mirror.bat  oddopp.spec  polymarket_breakdown.py  (+10 more)
.claude/: settings.local.json
.claude/docs/: architectural_patterns.md  gecko_betsson_implementation.md  mcp_setup_guide.md  mcp_usage_guide.md  mcp_verification.md  provider_optimizations.md
.github/workflows/: ci.yml
arnold/: http_client.py  launch.py  proxy.py  requirements.txt  server.py  stocks_runtime.py
arnold/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
arnold/mirror/: arb_runner.py  browser.py  data_stream.py  pending_loop.py  pinnacle_shared.py  play_loop.py  poly_clob.py  poly_live_poller.py  provider_runner.py  reconcile.py  router.py  slip_odds_stream.py  sse.py  state_writer.py
arnold/tests/: test_arb_math.py  test_arb_runner_green_gate.py  test_arb_runner_v2.py  test_overlay_broadcaster.py  test_polymarket_convergence.py  test_provider_runner_stream.py  test_proxy.py  test_reconcile.py  test_recorder_dedup.py  test_slip_odds_stream.py  test_tv_overlay_router.py  test_workflow_contract.py
arnold/tv_overlay/: __init__.py  broadcaster.py  router.py  status.py
arnoldsports/: __init__.py
arnoldsports/frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
arnoldsports/mirror/: arb_runner.py  browser.py  pending_loop.py  play_loop.py  provider_runner.py  recorder.py
arnoldsports/tests/: test_mirror_router.py
arnoldstocks/frontend/: index.html  package-lock.json  package.json
backend/: .env.docker.example  .env.example  Dockerfile  alembic.ini  check_poly.py  docker-compose.dev.yml  docker-compose.yml  launcher.py  pyproject.toml  run_arnoldstocks.py  run_dev.py  run_fire.py  run_firevstocks.py  run_mirror.py
backend/alembic/: env.py
backend/config/: providers.yaml  sports.yaml
backend/data/: matched_events.csv  matched_events_verified.csv  missed_matches_analysis.csv  polymarket_events_final.csv  unibet_events_final.csv
backend/docker/: init-market-db.sql  pg-backup.sh
backend/docs/: ALTENAR_IMPLEMENTATION_PLAN.md  ALTENAR_MULTISPORT_FIX.md  ALTENAR_RESEARCH_SUMMARY.md  BANKROLL_STRATEGY.md  EXTRACTION_MONITORING_GUIDE.md  GECKO_OPTIMIZATION_COMPLETE.md  MONITORING_STATUS.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_SYSTEM_SUMMARY.md  ORCHESTRATOR_ENHANCEMENTS.md  PROVIDER_IMPLEMENTATION_GUIDE.md  PROVIDER_OPTIMIZATION_WORKFLOW.md  PROVIDER_VALIDATION_WORKFLOW.md  PROVIDER_WORKFLOW.md  VALIDATION_SUMMARY_2026-01-26.md  betsson_final_status.md  betsson_status_update.md  (+13 more)
config/: provider-list.json
debug/: debug_output.txt  events_dump.txt  events_output.txt  matching_output.txt  matching_output_v2.txt  matching_output_v3.txt  missed_matches_output.txt  missed_matches_output_v2.txt  snabbare_final_full_run.txt  snabbare_full_final.txt  snabbare_full_final_v2.txt  snabbare_full_no_limits.txt  snabbare_full_run.txt  snabbare_full_scrolling.txt  snabbare_scrolling_run_v2.txt  snabbare_scrolling_run_v3.txt  snabbare_source.html  snabbare_stats_golf.txt  snabbare_stats_table_tennis.txt  spectate.md  stats_football.txt  stats_football_v2.txt  stats_football_v3.txt  stats_hockey.txt  stats_run.txt  stats_tennis.txt  validation_output.txt
docker/: init-market-db.sql  pg-backup.sh
docs/: BANKROLL_FIXES_SUMMARY.md  BANKROLL_MANAGEMENT.md  BET_PLACEMENT_WORKFLOW.md  BET_WORKFLOW_QUICK_START.md  BONUS_MODE_IMPLEMENTATION.md  BONUS_MODE_QUICK_START.md  FRONTEND_INTEGRATION.md  QUICK_START.md  code-review-2026-05.md  mirror-wiring.md  mirror-workflow.md  openai-hybridmodel.md  provider_bonus_terms.md  tv-overlay-api-audit.md
firevsports/: __init__.py  firevsports.bat  firevsports.ps1  launch.py  proxy.py  server.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
local/: arnold.bat  arnold.ps1  betty.bat  betty.ps1  http_client.py  kill.bat  kill.ps1  launch.py  proxy.py  server.py
money/: __init__.py  currency.py  errors.py  money.py  rates.py
navigations/: quickcasino-nav
nginx/: nginx.conf
scrap/: betsson_direct_api.json  check_db_stats.py  test_888sport_optimized.py  test_bucket_caching.py  test_snabbare_optimized.py  test_spectate_optimized.py  validate_all_providers.py  validate_dom_scrapers.py  validate_snabbare.py  validate_snabbare_full.py  validate_spectate.py
scripts/: audit_fresh_profile.py  container-watchdog.sh  discover_rainbet.py  quick_validate.py  server-deploy.sh  socks-tunnel.sh  test_gecko_performance.py  validate_gecko.py  validate_provider.py
tests/: analyze_markets.py  analyze_missed_matches.py  check_kambi.py  check_matches.py  check_normalization.py  debug_kambi.py  debug_kambi_groups.py  debug_kambi_lines.py  debug_matching.py  detect_opportunities.py  inspect_outcomes.py  probe_all_providers.py  pyproject.toml  stats_pairing.py  test_cache.py  test_circuit_breaker.py  test_generic_workflow.py  test_health.py  test_kambi_endpoints.py  test_kambi_workflow.py  test_matching.py  test_metrics.py  test_multi_provider.py  test_pipeline.py  test_pipeline_enhanced.py  test_poly_parse.py  test_provider_monitor.py  validate_db.py  verify_db.py  verify_lines.py  verify_matching_pipeline.py  verify_polymarket_pipeline.py  verify_unibet_full.py  verify_unibet_retriever.py  view_db_results.py
(+1580 files in other folders)
