[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firev"
version = "0.1.0"
description = "Firev - Betting analytics platform comparing odds across 40+ sportsbooks"
requires-python = ">=3.10"
dependencies = [
    # HTTP/API
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # WebSocket
    "websockets>=12.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # Data
    "pydantic>=2.5.0",

    # Matching
    "rapidfuzz>=3.6.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",

    # Config
    "pyyaml>=6.0",

    # Market data
    "databento>=0.43.0",
    "yfinance>=0.2.36",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.4.0",
]
scrape = [
    # Patchright = undetected Playwright fork (bypasses Cloudflare/Imperva)
    # Falls back to playwright if patchright not installed
    "patchright>=1.48.0",
    "playwright>=1.40.0",
]
build = [
    "pyinstaller>=6.0",
    "pywebview>=5.0",
]
ml = [
    "torch>=2.0.0",
]

[project.scripts]
firev = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
