[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arnold"
version = "0.1.0"
description = "Arnold - Betting analytics platform comparing odds across 40+ sportsbooks"
requires-python = ">=3.10"
dependencies = [
    # HTTP/API
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # WebSocket
    "websockets>=12.0",
    "signalrcore>=1.0.2",

    # SOCKS proxy support for aiohttp (Bahnhof VPS SOCKS5)
    "aiohttp-socks>=0.8.0",
    "PySocks>=1.7.1",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Data
    "pydantic>=2.5.0",

    # Matching
    "rapidfuzz>=3.6.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",

    # Config
    "pyyaml>=6.0",

    # Market data
    "async-rithmic>=1.5",
    "databento>=0.43.0",
    "yfinance>=0.2.36",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.4.0",
]
scrape = [
    # Patchright = undetected Playwright fork (bypasses Cloudflare/Imperva)
    # Falls back to playwright if patchright not installed
    "patchright>=1.48.0",
    "playwright>=1.40.0",
]
poly = [
    "py-clob-client>=0.18.0",
]
kalshi = [
    "kalshi-python>=2.1.4",
]
ml = [
    "torch>=2.0.0",
]

[project.scripts]
arnold = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP", "B"]
ignore = [
    "E501",  # line length — formatter handles wrapping
    "B008",  # FastAPI Depends()/Query() default pattern
    "B007",  # unused loop control variable
    "B023",  # closure-over-loop-var — many false positives
    "B904",  # raise-from chain
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
