[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oddopp-backend"
version = "0.1.0"
description = "OddOpp Backend - Polymarket arbitrage & value betting"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    
    # HTTP
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    
    # Data
    "pydantic>=2.5.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    
    # Fuzzy matching
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
scrape = [
    "playwright>=1.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
